--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "@chromatic-com/storybook": "^3.2.3",
     "@storybook/addon-essentials": "^8.4.7",
     "@storybook/addon-interactions": "^8.4.7",
-    "@storybook/addon-onboarding": "^8.4.7",
     "@storybook/addon-styling": "^2.0.0",
+    "@storybook/addons": "^7.6.17",
     "@storybook/blocks": "^8.4.7",
     "@storybook/nextjs": "^8.4.7",
     "@storybook/react": "^8.4.7",
@@ -35,10 +35,13 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "copy-to-clipboard": "^3.3.3",
     "eslint": "^8",
     "eslint-config-next": "14.2.17",
     "eslint-plugin-storybook": "^0.11.1",
     "postcss": "^8",
+    "react-markdown": "^9.0.1",
+    "react-syntax-highlighter": "^15.6.1",
     "storybook": "^8.4.7",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
