--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@chromatic-com/storybook": "^3.2.3",
     "@storybook/addon-essentials": "^8.4.7",
     "@storybook/addon-interactions": "^8.4.7",
+    "@storybook/addon-links": "^8.4.7",
     "@storybook/addon-styling": "^2.0.0",
     "@storybook/addons": "^7.6.17",
     "@storybook/blocks": "^8.4.7",
