--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,5 +3,8 @@
     "next/core-web-vitals",
     "next/typescript",
     "plugin:storybook/recommended"
-  ]
+  ],
+    "rules": {
+    "@typescript-eslint/no-explicit-any": "warn" // 규칙 경고로 변경
+  }
 }
