--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,6 +5,7 @@
     "plugin:storybook/recommended"
   ],
     "rules": {
+    "@typescript-eslint/no-unused-vars": "warn", // 규칙 경고로 변경
     "@typescript-eslint/no-explicit-any": "warn" // 규칙 경고로 변경
   }
 }
