--- a/package.json
+++ b/package.json
@@ -3,12 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "prepare": "husky installl",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "eslint --cache --fix",
+      "prettier --cache --write"
+    ]
   },
   "dependencies": {
     "@tanstack/react-query": "^5.62.11",
@@ -40,7 +47,10 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.17",
     "eslint-plugin-storybook": "^0.11.1",
+    "husky": "^9.1.7",
+    "lint-staged": "^15.3.0",
     "postcss": "^8",
+    "prettier": "^3.4.2",
     "react-markdown": "^9.0.1",
     "react-syntax-highlighter": "^15.6.1",
     "storybook": "^8.4.7",
