--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
   "dependencies": {
     "@tanstack/react-query": "^5.62.11",
     "@tanstack/react-query-devtools": "^5.62.11",
+    "@types/jsonwebtoken": "^9.0.7",
     "axios": "^1.7.9",
     "clsx": "^2.1.1",
+    "jsonwebtoken": "^9.0.2",
     "next": "14.2.17",
     "react": "^18",
     "react-dom": "^18",
